--- a/style.css
+++ b/style.css
@@ -9,13 +9,24 @@
 
 body {
     background-color: rgb(131, 206, 206);
-    margin: 100px;
+    margin: 25px;
+}
+
+span {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.player2 {
+    margin:5px
 }
 
 h1 {
     text-align: center;
     color: white;
     box-shadow: 1px 1px 5px 1px black;
+    margin: 12px;
 }
 
 #gameBoard {
@@ -59,6 +70,11 @@ h1 {
 .bottomLine {
     text-align: center;
     margin: 50px;
+}
+
+.displayMessage {
+    font-size: 25px;
+    color: white;
 }
 
 .resetButton {
