--- a/style.css
+++ b/style.css
@@ -24,13 +24,18 @@ span {
 
 h1 {
     text-align: center;
-    color: white;
+    color: black;
     box-shadow: 1px 1px 5px 1px black;
     margin: 12px;
+    background-color: white;
+}
+
+.pO, .pX {
+    text-align: center;
 }
 
 #gameBoard {
-    margin: 50px;
+    margin: 40px;
     display: grid;
     grid-template-columns: repeat(3, auto);
     justify-content: center;
